--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 											<div class="profile-info">
 												<div class="profile-preword"><span>Hello</span></div>
 												<h1 class="profile-title"><span>我是</span> 郜慧姣</h1>
-												<h2 class="profile-position">前端H5开发工程师 & 前端开发讲师</h2></div>
+												<h2 class="profile-position">前端H5开发工程师</h2></div>
 											<ul class="profile-list">
 												<li class="clearfix">
 													<strong class="title">年龄</strong>
@@ -172,7 +172,7 @@
 												</li>
 												<li class="clearfix">
 													<strong class="title">博客地址</strong>
-													<span class="cont"><a href="http://www.cnblogs.com/gaohuijiao/">http://www.cnblogs.com/gaohuijiao/</a></span>
+													<span class="cont"><a href="http://www.cnblogs.com/gaohuijiao/" style="color: #07cb79;">http://www.cnblogs.com/gaohuijiao/</a></span>
 												</li>
 												<li class="clearfix">
 													<strong class="title"><span class="button">最快上岗时间</span></strong>
@@ -185,7 +185,7 @@
 							</div>
 
 							<div class="section-txt-btn">
-								<p>我是郜慧姣.亲和力和表达力满分的程序媛讲师, 大一开始接触到HTML后就被其吸引,15年来到北京从事前端开发工作,16年初在蓝鸥科技有限公司从事前端讲师一职,热爱我的行业热爱我的工作.</p>
+								<p>我是郜慧姣.动手能力和表达能力满分的程序媛, 科班出身，大一开始接触到HTML后就被其吸引,15年来到北京从事前端开发工作,正式上班已有两年的时间,我热爱我的行业热爱我的工作，享受不断充实不断提高的生活.</p>
 							</div>
 						</div>
 					</section>
@@ -345,7 +345,7 @@
 											<div class="date">2016.2 - 至今</div>
 											<h3>蓝鸥科技有限公司</h3>
 											<h4>前端开发工程师</h4>
-											<p>蓝鸥是美国苹果AATC和Unity官方认证培训机构,中国先进的移动互联网研发实训基地,致力于Unity、Android、HTML5开发、Web安全等人才的培养.创“FCBS”实训体系,以真实企业级项目打造专业IT技术人才,学员上线项目1000+,选蓝鸥,学尖端IT技术,4个月从入门到专业。</p>
+											<p>蓝鸥是美国苹果AATC和Unity官方认证培训机构,中国先进的移动互联网研发实训基地,致力于Unity、Android、HTML5开发、Web安全等人才的培养.平时工作比较忙碌，主要做一些公司承接的项目以及在线课程，很享受这种不断充实不断提高的生活</p>
 										</div>
 									</div>
 
@@ -356,7 +356,7 @@
 											<div class="date">2015 - 2016</div>
 											<h3>江海沐辉科技有限公司</h3>
 											<h4>前端H5开发工程师</h4>
-											<p>JHM-江海科技,是全程产品服务公司,专注于无线金融领域 是新模式,新渠道,新媒体与电子银行之间的桥梁.</p>
+											<p>JHM-江海科技,是全程产品服务公司,专注于无线金融领域 是新模式,新渠道,新媒体与电子银行之间的桥梁.我的主要工作是承接公司的一些H5活动，尤其是节假日时候，会比较忙碌，比较有代表性的是去年的金猴闹元宵活动，上线一小时访问量破百万</p>
 										</div>
 									</div>
 
@@ -684,7 +684,7 @@
 		<!-- .wrapper -->
 
 		<!-- 回到顶部 -->
-		<a class="btn-scroll-top" href="#"><i class="rsicon rsicon-arrow-up"></i></a>
+		<a class="btn-scroll-top" href="#">top<i class="rsicon rsicon-arrow-up"></i></a>
 		<div id="overlay"></div>
 
 		<!-- Scripts -->
