--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 		<!-- .wrapper -->
 
 		<!-- 回到顶部 -->
-		<a class="btn-scroll-top" href="#">top<i class="rsicon rsicon-arrow-up"></i></a>
+		<a class="btn-scroll-top" href="#" style="line-height:34px;">top<i class="rsicon rsicon-arrow-up"></i></a>
 		<div id="overlay"></div>
 
 		<!-- Scripts -->
