--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 											<ul class="profile-list">
 												<li class="clearfix">
 													<strong class="title">年龄</strong>
-													<span class="cont">23</span>
+													<span class="cont">24</span>
 												</li>
 												<li class="clearfix">
 													<strong class="title">住址</strong>
@@ -353,7 +353,7 @@
 										<span class="dot"></span>
 										<div class="timeline-box-inner animate-left">
 											<span class="arrow"></span>
-											<div class="date">2015 - 2016</div>
+											<div class="date">2014.6 - 2016</div>
 											<h3>江海沐辉科技有限公司</h3>
 											<h4>前端H5开发工程师</h4>
 											<p>JHM-江海科技,是全程产品服务公司,专注于无线金融领域 是新模式,新渠道,新媒体与电子银行之间的桥梁.我的主要工作是承接公司的一些H5活动，尤其是节假日时候，会比较忙碌，比较有代表性的是去年的金猴闹元宵活动，上线一小时访问量破百万</p>
@@ -367,7 +367,7 @@
 											<div class="date">2014 - 2015</div>
 											<h3>江西师范大学宏奕工作室..</h3>
 											<h4>前端布局</h4>
-											<p>该工作室由12级物联网班学生发起,受到了学校和老师的支持,主要在老师的帮助下承接一些校内外网站的搭建工作.我的主要职责是制作网站的静态页面及进行后期维护工作.</p>
+											<p>该工作室由物联网班学生发起,受到了学校和老师的支持,主要在老师的帮助下承接一些校内外网站的搭建工作.我的主要职责是制作网站的静态页面及进行后期维护工作.</p>
 										</div>
 									</div>
 
@@ -399,7 +399,7 @@
 
 										<div class="timeline-box-inner animate-right">
 											<span class="arrow"></span>
-											<div class="date"><span>2011.9 - 2015.5</span></div>
+											<div class="date"><span>2010.9 - 2014.5</span></div>
 											<h3>江西师范大学</h3>
 											<h4>计算机系</h4>
 											<h5>课程:C语言  C++  数据结构  计算机算法  计算机网络 计算机组成原理</h5>
